2021-01-24  Omar Polo  <op@omarpolo.com>

	* server.c (send_dir): make the directory index customizable

2021-01-23  Omar Polo  <op@omarpolo.com>

	* gg.c (main): added gg, a barebone gemini client.  used by the
	regress suite

2021-01-21  Omar Polo  <op@omarpolo.com>

	* configure: added a configure script

	* server.c (handle_handshake): glob for vhost domain

	* gmid.c (log_request): logs the full IRI and the response code (even for CGI)

2021-01-19  Omar Polo  <op@omarpolo.com>

	* parse.y (servopt): add "lang" server option
	(servopt): moving "default type" from global options to server options

	* Dockerfile: add a dockerfile

2021-01-18  Omar Polo  <op@omarpolo.com>

	* parse.y (option): add mime and "default type" options for media types.

2021-01-17  Omar Polo  <op@omarpolo.com>

	* sandbox.c (sandbox): added initial seccomp(2) support

2021-01-15  Omar Polo  <op@omarpolo.com>

	* cgi.c (start_cgi): set SERVER_NAME to the vhost when executing CGI scripts

	* parse.y (option): add ability to specify the tls versions with "protocols"

	* gmid.c (handle_open_conn): ensure the port number of the request matches

	* sandbox.c (sandbox): sandbox on OpenBSD (pledge/unveil, as before) and on FreeBSD (capsicum) too

	* sample.conf: added sample configuration

	* gmid.c (main): changed behaviour: daemon off by default
	(main): changed -c in -C (cert option)
	(main): changed -k in -K (key option, for consistency with -C)
	(main): added -c to load a configuration
	(main): certs, key and doc (-C -K and -d) doesn't have a default value anymore
	(handle_handshake): add vhosts support

2021-01-13  Omar Polo  <op@omarpolo.com>

	* iri.c (parse_scheme): normalize scheme while parsing, so we're
	RFC3986 compliant.

2021-01-11  Omar Polo  <op@omarpolo.com>

	* 1.4 and 1.4.1 tagged

	* gmid.c (main): ipv6 disabled by default and -6 flag to enable it
	(handle): reject non-gemini protocols with 53

2021-01-10  Omar Polo  <op@omarpolo.com>
