@@ -49,6 +49,7 @@
 #define MAX_USERS	64
 
 #define HOSTSLEN	64
+#define LOCLEN		32
 
 #define LOGE(c, fmt, ...) logs(LOG_ERR,     c, fmt, __VA_ARGS__)
 #define LOGW(c, fmt, ...) logs(LOG_WARNING, c, fmt, __VA_ARGS__)
@@ -56,16 +57,21 @@
 #define LOGI(c, fmt, ...) logs(LOG_INFO,    c, fmt, __VA_ARGS__)
 #define LOGD(c, fmt, ...) logs(LOG_DEBUG,   c, fmt, __VA_ARGS__)
 
+struct location {
+	char		*match;
+	char		*lang;
+	char		*default_mime;
+	char		*index;
+};
+
 struct vhost {
 	const char	*domain;
 	const char	*cert;
 	const char	*key;
 	const char	*dir;
 	const char	*cgi;
-	char		*lang;
 	int		 dirfd;
-	char		*default_mime;
-	char		*index;
+	struct location	 locations[LOCLEN];
 };
 
 extern struct vhost hosts[HOSTSLEN];
@@ -160,6 +166,7 @@ void		 parse_conf(const char*);
 void		 load_vhosts(struct tls_config*);
 int		 make_socket(int, int);
 int		 listener_main(void);
+void		 init_config(void);
 void		 usage(const char*);
 
 /* provided by lex/yacc */
@@ -175,6 +182,9 @@ void		 load_default_mime(struct mime*);
 const char	*mime(struct vhost*, const char*);
 
 /* server.c */
+const char	*vhost_lang(struct vhost*, const char*);
+const char	*vhost_default_mime(struct vhost*, const char*);
+const char	*vhost_index(struct vhost*, const char*);
 int		 check_path(struct client*, const char*, int*);
 void		 open_file(struct pollfd*, struct client*);
 void		 check_for_cgi(char *, char*, struct pollfd*, struct client*);
